# pybundler

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dprint.json  lefthook.yaml  mise.toml
.github/workflows/: ci.yml
.zed/: settings.json
src/: analyzer.rs  bundler.rs  codegen.rs  lib.rs  licenses.rs  module_graph.rs  resolver.rs  sys_paths.rs  tree_shaking.rs
testdata/bundle-directive/: case.json  main.py
testdata/bundle-directive-conflict/: case.json  main.py
testdata/dynamic-import-unresolved/: case.json  main.py
testdata/dynamic-imports/: case.json  main.py
testdata/empty-file/: case.json
testdata/entry-module-once/: case.json  main.py
testdata/external-options/: case.json  main.py
testdata/format-option/: case.json  main.py
testdata/ignore-directive/: case.json  included.py  main.py  skipped-next.py  skipped-same.py
testdata/import-syntax/: case.json  main.py  math.py  os.py  sys.py  time.py
testdata/indentation-spaces/: case.json  helper.py  main.py
testdata/indentation-tabs/: case.json  helper.py  main.py
testdata/interpreter-options/: case.json  main.py
testdata/lazy-import/: case.json  helper.py  main.py
testdata/license-collection/: case.json  main.py
testdata/max-imported-modules-exceeded/: case.json  m1.py  m2.py  main.py
testdata/missing-entry-error/: case.json
testdata/multiline-string-behavior/: case.json  main.py
testdata/namespace-packages/: case.json  main.py
testdata/package-init-import/: case.json  main.py
testdata/package-over-module/: case.json  foo.py  main.py
tests/: bundler_test.rs
(+37 files in other folders)
