[package]
name = "pybundler"
edition = "2024"

[dependencies]
path-clean = "1"
ruff_formatter = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
ruff_linter = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.22" }
zip = "8.6.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
